{
    "name": "ProjectInput",
    "maps": [
        {
            "name": "Player",
            "id": "b7f7febd-6e42-42b8-b5da-d33493df64f5",
            "actions": [
                {
                    "name": "MoveX",
                    "type": "Value",
                    "id": "f3e88c42-159c-4b0f-870e-0f169f23afc3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchButton",
                    "type": "Button",
                    "id": "805366fb-47c4-4e61-8633-5bb964b863e8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchValue",
                    "type": "Value",
                    "id": "23edac06-1f62-4cf5-8453-df5a8c9dad07",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ae94e25a-11a5-483e-88df-9e4b2c1e301c",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "ScaleVector2(y=0),NormalizeVector2",
                    "groups": "",
                    "action": "MoveX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "fde28df1-d09c-4ac2-8a61-2eb7af5d8bfc",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveX",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "ebd59585-8e12-4a72-a992-51be9e248c7f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveX",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "9425c3a3-e40b-4e26-982a-5470799a59be",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveX",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "67185a3a-9c81-4417-b967-9340c1bb6120",
                    "path": "<Mouse>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "34ccf7c3-6b7c-46ec-a371-6d4851f344f4",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e7f49f1c-4417-47aa-9143-c389031f96c2",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchValue",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "92eecff5-0ad5-4342-b6d4-bb4c2ad70a33",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchValue",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}